// NOTE:
// This proto definition is intended to be moved into a separate package/crate
// in the future. The goal is to publish it as a reusable dependency so that
// external clients can import and depend on the shared API contract directly.
syntax = "proto3";

package midnight_state;

service MidnightState {
  rpc GetAssetCreates (AssetCreatesRequest) returns (AssetCreatesResponse);
  rpc GetAssetSpends (AssetSpendsRequest) returns (AssetSpendsResponse);
  rpc GetRegistrations (RegistrationsRequest) returns (RegistrationsResponse);
  rpc GetDeregistrations (DeregistrationsRequest) returns (DeregistrationsResponse);
  rpc GetTechnicalCommitteeDatum (TechnicalCommitteeDatumRequest) returns (TechnicalCommitteeDatumResponse);
  rpc GetCouncilDatum (CouncilDatumRequest) returns (CouncilDatumResponse);
  rpc GetAriadneParameters (AriadneParametersRequest) returns (AriadneParametersResponse);
}

message AssetCreatesRequest {}
message AssetCreatesResponse {}

message AssetSpendsRequest {}
message AssetSpendsResponse {}

message RegistrationsRequest {}
message RegistrationsResponse {}

message DeregistrationsRequest {}
message DeregistrationsResponse {}

message TechnicalCommitteeDatumRequest {}
message TechnicalCommitteeDatumResponse {}

message CouncilDatumRequest {}
message CouncilDatumResponse {}

message AriadneParametersRequest {}
message AriadneParametersResponse {}
